--- a/src/app/projects.json
+++ b/src/app/projects.json
@@ -3871,11 +3871,11 @@
     "year": 2025,
     "category": "Residential",
     "location": "Multan",
-    "description": "Mr. Naveed living in this stunning 1 Kanal home in Multan, offering modern design, spacious interiors, and premium amenities.",
-    "preview": "/projects/Naveed_Option/1.webp",
+    "description": "Stunning 1 Kanal home in Multan, offering modern design, spacious interiors, and premium amenities.",
+    "preview": "/projects/Option_1/1.webp",
     "images": [
       {
-        "url": "/projects/Naveed_Option/1.webp"
+        "url": "/projects/Option_1/1.webp"
       }
     ]
   }
