--- a/src/app/projects.json
+++ b/src/app/projects.json
@@ -3893,8 +3893,14 @@
         "url": "/projects/Innovators/1.webp"
       },
       {
+        "url": "/projects/Innovators/13.webp"
+      },
+      {
         "url": "/projects/Innovators/2.webp",
         "collage": true
+      },
+      {
+        "url": "/projects/Innovators/14.webp"
       },
       {
         "url": "/projects/Innovators/3.webp"
