--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@studio-freight/lenis": "^1.0.42",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "axios": "^1.12.2",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
+    "cheerio": "^1.1.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
@@ -29,6 +30,7 @@
     "next-sitemap": "^4.2.3",
     "nodemailer": "^7.0.5",
     "nprogress": "^0.2.0",
+    "puppeteer": "^24.31.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
