--- a/src/app/projects.json
+++ b/src/app/projects.json
@@ -4085,7 +4085,7 @@
   },
   {
     "id": 119,
-    "title": "LGC Office",
+    "title": "IGC Office",
     "icon": "/icon4.webp",
     "year": 2025,
     "category": "Commercial",
