--- a/src/app/projects.json
+++ b/src/app/projects.json
@@ -1689,7 +1689,7 @@
     "icon": "/icon4.webp",
     "year": 2025,
     "category": "Residential",
-    "location": "Sahar Villas, Multan",
+    "location": "DHA, Multan",
     "description": "Arif Qureshi Sahab living in this stunning 1 Kanla home in Multan, offering Modern design, spacious interiors, and premium amenities.",
     "preview": "/projects/Arif_Qureshi_1_Kanal/2.webp",
     "images": [
