--- a/src/app/projects.json
+++ b/src/app/projects.json
@@ -3518,6 +3518,9 @@
       },
       {
         "url": "/projects/Chessior_Restaurant/5.webp"
+      },
+      {
+        "url": "/projects/Chessior_Restaurant/6.webp"
       }
     ]
   },
