--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
+    "browser-image-compression": "^2.0.2",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
